--- a/app/assets/stylesheets/schedules.css.scss
+++ b/app/assets/stylesheets/schedules.css.scss
@@ -2,58 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-@mixin adjacent-fields {
-  .field {
-    width: 35%;
-    display: inline-block;
-  }
-}
-
 #schedule-form {
   float: left;
 
-  // Bolds all jq buttonset elements as well, fix this!
-  label { font-weight: bold; }
-
-  div {
-    margin-bottom: 1rem;
-  }
-
-  .jq-buttonset {
-    div {
-      margin: 0; // reset simple_form defaults 
-      display: inline-block;
-    }
-
-    label.ui-widget {
-      // reset simple form defaults to keep from garbling
-      //  the ui buttonset elements
-      font-weight: normal;
-      margin: 0;
-      width: auto;
-      text-align: center;
-
-
-      &.ui-state-active {
-        $top-bottom-shadow: inset  0  8px 8px -8px #ffef3c,
-                            inset  0 -8px 8px -8px #ffef3c;
-        -moz-box-shadow: $top-bottom-shadow;
-        -webkit-box-shadow: $top-bottom-shadow;
-        box-shadow:  $top-bottom-shadow;
-      }
-    }
-  }
-
-  //start and end dates
-  #date-fields {
-    @include adjacent-fields;
-  }
-
-  #time-fields {
-    @include adjacent-fields;
-  }
-
-  #description {
+  // fix wonky margins on constructed buttonset
+  .schedule_on_days {
+    margin: 0;
   }
 }
 
