--- a/app/assets/stylesheets/simple_form.css.scss
+++ b/app/assets/stylesheets/simple_form.css.scss
@@ -1,8 +1,9 @@
 // Simple form default styling
+// updated Nov 2014 - David
 
 .simple_form {
-  div.input {
-    margin-bottom: 10px;
+  div.input, .jq-buttonset {
+    margin-bottom: 1rem;
     clear: both;
     /* Required for Webkit, but not for Gecko */
   }
@@ -11,6 +12,7 @@
     width: 100px;
     text-align: right;
     margin: 2px 10px;
+    font-weight: bold;
   }
   .error {
     clear: left;
@@ -26,6 +28,7 @@
     display: block;
     font-style: italic;
   }
+
 }
 
 div.boolean, .simple_form input[type='submit'] {
@@ -80,4 +83,12 @@ label.collection_check_boxes {
   margin: 0;
   vertical-align: -2px;
   margin-left: 2px;
+}
+
+.jq-buttonset {
+  @extend %buttonset-fix;
+
+  label.ui-state-active {
+    @include top-bottom-highlight($active-highlight);
+  }
 }
