--- a/app/assets/stylesheets/students.css.scss
+++ b/app/assets/stylesheets/students.css.scss
@@ -3,61 +3,87 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 #profile-info {
-  width: 50%;
-  float: right;
-  margin-top: 2.27em;
+  width: 43%;
+  float: left;
+
+  .links {
+    float: left;
+    margin-top: -30px;
+
+    a { margin-right: 5px; }
+  }
+
+  h2 {
+    clear: both;
+    margin-top: 2rem;
+  }
 
   p {
-    margin-left: 2em;
+    padding-left: 10px;
     margin-bottom: 2px;
-    padding-left:10px;
     background-color: #cfdfff;
     border-radius: 5px;
   }
-}
 
-// in students#show
-.schedule-accordion {
-  margin-bottom: 3em;
-  width: 50%;
-  word-wrap: break-word;
+  #color-selector {
+    @extend %buttonset-fix;
+    position: relative;
 
-  // Schedule type colors
-  .regular { color: #837bdb; }
-  .temporary { color: #14B406; }
-  .absent { color: #f0827a; }
+    display: inline-block;
+    width: 300px;
 
-  // all accordian rows
-  .accordion-field {
-    background: #eee;
-
-    // the schedule dates label ie MWF
-    .schedule-effective-days {
-      font-size: 20px;
-      margin-bottom: 0.5em;
-    }
-
-    .schedule-times{
-      float:left
-    }
-
-    .schedule-dates {
-      float: right;
-      margin-right: 2em;
-    }
-
-    .schedule-links {
-      clear: both;
-      float: right;
-      margin-top: 1em;
+    .ui-button {
+      margin-bottom: 1rem;
     }
   }
+}
 
-  // override on hover to keep consistent with jqui
-  .ui-accordion-header:hover {
-    span.regular, span.temporary, span.absent { color: #fff; }
-    &.ui-state-active {
-      span.regular, span.temporary, span.absent { color: #000; }
+.schedules {
+  float: right;
+  width: 52%;
+  margin-top: 12px;
+
+  .schedule-accordion {
+    margin-bottom: 3em;
+    word-wrap: break-word;
+
+    // Schedule type colors
+    .regular { color: $schedule-regular; }
+    .temporary { color: $schedule-temporary; }
+    .absent { color: $schedule-absent; }
+
+    // all accordian rows
+    .accordion-field {
+      background: #eee;
+
+      // the schedule dates label ie MWF
+      .schedule-effective-days {
+        font-size: 20px;
+        margin-bottom: 0.5em;
+      }
+
+      .schedule-times{
+        float:left
+      }
+
+      .schedule-dates {
+        float: right;
+        margin-right: 2em;
+      }
+
+      .schedule-links {
+        clear: both;
+        float: right;
+        margin-top: 1em;
+      }
+    }
+
+    // override on hover to keep consistent with jqui
+    .ui-accordion-header:hover {
+      span.regular, span.temporary, span.absent { color: #fff; }
+      &.ui-state-active {
+        span.regular, span.temporary, span.absent { color: #000; }
+      }
     }
   }
 }
