Complete color and nickname form. Clean up students controller.
Complete form view/frontend, controller actions, routes and model
changes for student display options.

--- a/app/assets/stylesheets/students.css.scss
+++ b/app/assets/stylesheets/students.css.scss
@@ -25,12 +25,13 @@
     border-radius: 5px;
   }
 
-  #color-selector {
+  .student_color {
     @extend %buttonset-fix;
     position: relative;
 
-    display: inline-block;
-    width: 300px;
+    .control-label {
+      height: 120px;
+    }
 
     .ui-button {
       margin-bottom: 1rem;
