Add user's colors to calendar
The user's chosen color now shows up on their schedules
in the calendar. A contrasting color in the same hue is selected
automatically for the text

--- a/app/views/schedules/calendar.html.slim
+++ b/app/views/schedules/calendar.html.slim
@@ -17,9 +17,9 @@
 
         .hourly-view
           - @schedules[date].each do |schedule|
-            .schedule data-start_time=schedule.start_time data-overlapping=schedule.overlapping data-overlapped_by=schedule.overlapped_by
+            .schedule data-start_time=schedule.start_time data-overlapping=schedule.overlapping data-overlapped_by=schedule.overlapped_by data-color=schedule.student.color
               h4.name
-                = schedule.student.short_name
+                = schedule.student.name
               - schedule.shifts.each do |shift|
                 h5.time
                   = shift[:time]
