--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -13,36 +13,20 @@ $schedule-absent:    #f0827a;
 $md-red:             rgb(244, 67, 54);
 
 // effects
+@mixin transition($args...) {
+  -webkit-transition: $args;
+  -moz-transition: $args;
+  -ms-transition: $args;
+  -o-transition: $args;
+  transition: $args;
+}
+
 @mixin top-bottom-highlight( $color ) {
   $tbh: inset  0  8px 8px -7px $color,
         inset  0 -8px 8px -7px $color;
   -moz-box-shadow:    $tbh;
   -webkit-box-shadow: $tbh;
   box-shadow:         $tbh;
-}
-
-@mixin hover-highlight( $color: $active-highlight ) {
-  -webkit-transition: border 0.30s, box-shadow 0.30s ease-in-out;
-  -moz-transition: border 0.30s, box-shadow 0.30s ease-in-out;
-  -ms-transition: border 0.30s, box-shadow 0.30s ease-in-out;
-  -o-transition: border 0.30s, box-shadow 0.30s ease-in-out;
-  outline: none;
-
-  &:hover {
-    box-shadow: 0 0 5px $color;
-    border: 1px solid $color;
-  }
-}
-
-@mixin hover-darken( $color: rgba(black, .05) ) {
-  -webkit-transition: background-color 0.30s ease-in-out;
-  -moz-transition: background-color 0.30s ease-in-out;
-  -ms-transition: background-color 0.30s ease-in-out;
-  -o-transition: background-color 0.30s ease-in-out;
-
-  &:hover {
-    background-color: $color;
-  }
 }
 
 // a down pointing arrow
@@ -57,6 +41,18 @@ $md-red:             rgb(244, 67, 54);
 .mark {
   @include top-marker;
 }
+
+// a left/right fade gradient for hr
+@mixin fade-hr( $c1: $md-red, $c2: fade-out($md-red, 0.7)) {
+    border: 0;
+    height: 1px;
+    //background: #333;
+    background-image: -webkit-linear-gradient(left, $c2, $c1, $c2); 
+    background-image:    -moz-linear-gradient(left, $c2, $c1, $c2); 
+    background-image:     -ms-linear-gradient(left, $c2, $c1, $c2); 
+    background-image:      -o-linear-gradient(left, $c2, $c1, $c2); 
+}
+
 
 // fixes
 
