--- a/app/assets/stylesheets/_calendar.css.scss
+++ b/app/assets/stylesheets/_calendar.css.scss
@@ -58,15 +58,32 @@ $default-schedule-width: 133px;
         line-height: 20px;
         // allows js to measure text width
         display: inline-block;
+
+        // last sched defaults to absent color
+        &:last-child { color: $schedule-absent; }
       }
 
       .v-div {
         height: 1rem;
-        border-left: 1px solid $schedule-regular;
+        border-left: 1px solid #999;
 
         // buffer for js to place schedules
         width: 7px;
         margin-left: 7px;
+      }
+
+      // set schedule group colors
+      .regular {
+        color: $schedule-regular;
+        & + .v-div { border-color: $schedule-regular; }
+      }
+      .temporary {
+        color: $schedule-temporary;
+        & + .v-div { border-color: $schedule-temporary; }
+      }
+      .absent {
+        color: $schedule-absent;
+        & + .v-div { border-color: $schedule-absent; }
       }
     }
 
@@ -76,6 +93,11 @@ $default-schedule-width: 133px;
       box-shadow: 0 0 5px $secondary-blue;
       border: 1px solid $secondary-blue;
       background: rgb(240, 240, 240);
+    }
+
+    // schedules with display toggled off
+    .schedule.off {
+      display: none;
     }
 
 
