--- a/app/views/schedules/calendar.html.slim
+++ b/app/views/schedules/calendar.html.slim
@@ -2,28 +2,32 @@
 
   #controls
     #today
-      = link_to 'Today', {date: Date.today}, {class: 'button'}
+      = link_to 'Today', calendar: {date: Date.today}
+
     #date
+      = link_to '<', calendar: {date: @calendar.previous}
+      h4 = @calendar.print_date_interval
+      = link_to '>', calendar: {date: @calendar.next}
+
+    #type
+      = link_to 'Day',   calendar: {type: :day}
+      = link_to 'Week',  calendar: {type: :week}
+      = link_to 'Month', calendar: {type: :month}
+
     #users-toggle
       - @calendar.students.each do |student|
-        = check_box_tag student.id, nil, true
-        = label_tag student.id, student.name
-    #type
+        li
+          = check_box_tag student.id, nil, true
+          = label_tag student.id, student.name
 
-
-  .cal-week
-    - (@calendar.date.beginning_of_week-1..@calendar.date.end_of_week-1).each do |date|
+  #display
+    - (@calendar.cal_begin..@calendar.cal_end).each do |date|
 
       = content_tag :div, class: 'cal-day', id: ('td' if date == Date.today)
         h3.day-label = date.to_s(:cal)
 
-        .hourly-view
-          - @calendar.schedules_by_date[date].each do |schedule|
-            .schedule data-user_id=schedule.student.id data-offset=schedule.offset data-color=schedule.student.color
-              h4.name
-                = schedule.student.name
-              - schedule.shifts.each do |shift|
-                h5 class="time #{shift[:group]}"
-                  = shift[:time]
-                - unless shift[:type] == :end
-                  .v-div data-length=shift[:length]
+        .detailed-schedules
+          = render partial: 'detailed_schedules', object: @calendar.schedules_by_date[date]
+
+        .compact-schedules
+          = render partial: 'compact_schedules', object: @calendar.schedules_by_date[date]
