--- a/app/views/schedules/_detailed_schedules.html.slim
+++ b/app/views/schedules/_detailed_schedules.html.slim
@@ -1,4 +1,4 @@
-- detailed_schedules.each do |schedule|
+- schedules.each do |schedule|
   .schedule data-user_id=schedule.student.id data-offset=schedule.offset data-color=schedule.student.color
     h4.name
       = schedule.student.name
