--- a/app/views/schedules/calendar.html.slim
+++ b/app/views/schedules/calendar.html.slim
@@ -1,33 +1,4 @@
+/ just a stub page for jQ to hook on
+/  see _calendar_display for the template
 #calendar data-offset=@calendar.offset
-
-  #controls
-    #today
-      = link_to 'Today', calendar: {date: Date.today}
-
-    #date
-      = link_to '<', calendar: {date: @calendar.previous}
-      h4 = @calendar.print_date_interval
-      = link_to '>', calendar: {date: @calendar.next}
-
-    #type
-      = link_to 'Day',   calendar: {type: :day}
-      = link_to 'Week',  calendar: {type: :week}
-      = link_to 'Month', calendar: {type: :month}
-
-    #users-toggle
-      - @calendar.students.each do |student|
-        li
-          = check_box_tag student.id, nil, true
-          = label_tag student.id, student.name
-
-  #display
-    - (@calendar.cal_begin..@calendar.cal_end).each do |date|
-
-      = content_tag :div, class: 'cal-day', id: ('td' if date == Date.today)
-        h3.day-label = date.to_s(:cal)
-
-        .detailed-schedules
-          = render partial: 'detailed_schedules', object: @calendar.schedules_by_date[date]
-
-        .compact-schedules
-          = render partial: 'compact_schedules', object: @calendar.schedules_by_date[date]
+  = render partial: 'calendar_display', locals: {calendar: @calendar}
