--- a/app/views/schedules/calendar.html.slim
+++ b/app/views/schedules/calendar.html.slim
@@ -1,4 +1,5 @@
 / just a stub page for jQ to hook on
 /  see _calendar_display for the template
-#calendar data-offset=@calendar.offset
+h1 Calendar
+#calendar
   = render partial: 'calendar_display', locals: {calendar: @calendar}
