--- a/app/views/schedules/_calendar_display.html.slim
+++ b/app/views/schedules/_calendar_display.html.slim
@@ -1,24 +1,27 @@
 #controls
-  #today
-    = link_to 'Today', calendar: {date: Date.today}, remote: true
 
   #date
     = link_to '<', calendar: {date: calendar.previous}, remote: true
     h4 = calendar.date_label
     = link_to '>', calendar: {date: calendar.next}, remote: true
 
+  #today
+    = link_to 'Today', calendar: {date: :today}, remote: true
+
   #type
     = link_to 'Day',   calendar: {type: :day}, remote: true
     = link_to 'Week',  calendar: {type: :week}, remote: true
     = link_to 'Month', calendar: {type: :month}, remote: true
 
-  #users-toggle
-    - calendar.students.each do |student|
-      li
-        = check_box_tag student.id, nil, true
-        = label_tag student.id, student.name
+  #students
+    #menu-text Students
+    ul
+      - calendar.students.each do |student|
+        li data-user=student.id data-color=student.color
+          span.icon
+          h4.name = student.name
 
-#display
+#display data-type=calendar.type
   - (calendar.cal_begin..calendar.cal_end).each do |date|
     = content_tag :div, class: 'cal-day', id: ('td' if date == Date.today)
       h3.day-label = date.to_s(:cal)
